# cv-practice

./: .gitignore  README.md  pyproject.toml
configs/: assistive.default.yaml
configs/profiles/: default.json
docs/: agcp_mvp.md  replay_calibration_resume_fix.md
experiments/: AirCanvasStudio.py  HandTrackingMin.py  HandTrackingModule.py  TestGameHandTracking.py  VolumeHandControl.py
src/cv_practice/: main.py
src/cv_practice/assistive/: __init__.py  __main__.py  actions.py  app.py  calibration.py  config.py  detector.py  evaluation.py  inference.py  recording.py  state_machine.py  telemetry.py  types.py
src/cv_practice/features/: edges.py
src/cv_practice/io/: image_io.py
src/cv_practice/pipelines/: baseline.py
src/cv_practice/viz/: plot.py
tests/: test_assistive_actions.py  test_assistive_inference.py  test_assistive_profile_io.py  test_assistive_state_machine.py  test_edges.py  test_image_io.py
